# cinecrawl

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  db.py  exceptions.py  logging_config.py  main.py  models.py  movie_cache.py  movie_normalizer.py  omdb_enricher.py  pyproject.toml  retry.py  validation.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 13b1c9cdb618_remove_backdrop_url.py  2235560df98d_add_movie_url.py  4b20989d22ed_reinstate_verbose_location.py  7a35c8fc73f3_rename_to_address.py  8fa1687b9831_add_poster_url.py  993c270847f5_add_verbose_location.py  9980be720964_add_imdb_id.py  a1b2c3d4e5f6_add_ratings_jsonb.py  b2c3d4e5f6a7_replace_ratings_with_columns.py  df7d042b0ba7_initial_migration.py  ec9d682a8c2a_add_backdrop_url.py  eefd26f41b80_add_cascade_delete_for_showtimes.py
app/: __init__.py  database.py  models.py
providers/: base.py  bluepictures.py  ebonylife.py  filmhouse.py  filmworld.py  fusionintel.py  genesis.py  grandcinemas.py  magnificent.py  ozonecinemas.py  silverbird.py  skycinemas.py  thccinema.py  utils.py  viva.py
scrapers/: bluepictures.py  ebonylife.py  filmhouse.py  filmworld.py  genesis.py  grandcinemas.py  magnificent.py  ozonecinemas.py  silverbird.py  skycinemas.py  thccinema.py  utils.py  viva.py
tests/: test_movie_cache.py  test_movie_normalizer.py  test_retry.py  test_utils.py  test_validation.py
