[project]
name = "cinecrawl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.1",
    "bs4>=0.0.2",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "openai>=2.3.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.6.9",
    "black>=24.10.0",
]

[tool.black]
line-length = 88
target-version = ["py313"]
skip-string-normalization = false

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
